--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "preview": "vite preview"
+    // "predeploy": "npm run build",
+    // "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "react": "^18.3.1",
