--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-  "homepage": "https://raj-koshta.github.io/Spotify-clone",
+  "homepage": "https://github.com/raj-koshta/Spotify-clone/",
   "name": "spotify_clone",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "predeploy": "nom run build",
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
